--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
+    <script src="js/app/services/ProxyFactory.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/views/View.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
