--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="js/app/models/ListaNegociacoes.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/helpers/Associa.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/views/View.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
